--- a/style/styles.css
+++ b/style/styles.css
@@ -100,6 +100,9 @@
 .task label {
     display: flex;
 }
+.task .settings {
+    position: relative;
+}
 .todo-text {
     padding-left: 10px;
     margin-bottom: -.1px;
@@ -107,9 +110,37 @@
 .task i {
     margin: 0 25px 0 0;
 }
-.task i:hover {
+
+.settings .task-menu {
+    background-color: rgb(255, 255, 255);
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.15);
+    list-style-type: none;
+    padding: 5px 0;
+    position: absolute;
+    border-radius: 5px;
+    z-index: 2;
+    left: -75px;
+    bottom: -10px;
+    transform: scale(0);
+    transform-origin: right;
+    transition: transform 0.2s ease;
+}
+.settings:hover .task-menu {
+    transform: scale(1);
+}
+.task-menu li{
+    height: 25px;
+    font-size: 16px;
+    padding-right: 10px;
+    justify-content: flex-start;
+}
+.task-menu li:hover{
+    background: #f5f5f5;
     cursor: pointer;
-    color:#3c87ff;
+}
+.task-menu li i{
+    padding-left: 15px;
+    margin-right: 5px;
 }
 /* ACTIVE STYLING */
 .active {
